# Splitwave

./: .gitignore  NOTICE  README.md  package.json  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: build-linux.yml  ci.yml  release.yml
src/: app.css  app.html
src-tauri/: .gitignore  .taurignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: AACEncoder.swift
src-tauri/native/virtual_driver/: Info.plist  SplitAudioDriver.cpp
src-tauri/resources/SplitAudio.driver/Contents/: Info.plist
src-tauri/resources/SplitAudio.driver/Contents/MacOS/: SplitAudio
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: device.rs  effects.rs  engine.rs  graph.rs  input_bridge.rs  macos_hal.rs  mod.rs  permission.rs  pipeline.rs  playback.rs  pw_enum.rs  sck_capture.rs  signaling.rs  streams.rs  system_audio.rs  virtual_device.rs  webrtc_codec.rs  webrtc_node.rs
src-tauri/src/audio/capture/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/audio/device/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/audio/effects/: channel_balance.rs  gain.rs  lufs_meter.rs  mod.rs  mute.rs  noise_suppressor.rs  saturator.rs  waveform.rs  webrtc_bridge.rs
src-tauri/src/audio/encoders/: aac.rs  aiff.rs  dither.rs  flac.rs  mod.rs  mp3.rs  opus.rs  wav.rs
src-tauri/src/audio/pipeline/: dag.rs  file_reader.rs  input.rs  meter.rs  mod.rs  native.rs  output.rs  sig.rs  worker.rs
src-tauri/src/audio/pipeline/input/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/audio/pipeline/output/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/audio/streams/: cpal_stream.rs  macos.rs  mod.rs
src-tauri/src/audio/system_audio/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/audio/virtual_device/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/audio/volume/: linux.rs  macos.rs  mod.rs  windows.rs
src/lib/components/: ActivationButton.svelte  FlowEditor.svelte  NodeSidebar.svelte  PipelineList.svelte  copy_button.svelte
src/lib/components/icons/: _icon.svelte  add.svelte  arrow_left.svelte  arrow_redo.svelte  arrow_undo.svelte  autoplay.svelte  backspace.svelte  checkmark.svelte  chevron_down.svelte  clipboard_paste.svelte  copy.svelte  delete.svelte  folder.svelte  history.svelte  index.ts  key_command.svelte  loop.svelte  minus.svelte  refresh.svelte  rewind.svelte
src/lib/components/layout/: header.svelte
src/lib/domain/: audio-node.ts  device.ts  pipeline.ts
src/lib/flow/: adapter.ts  node-registry.ts
src/lib/flow/nodes/: InputNode.svelte  OutputNode.svelte
src/lib/modules/about/ui/: about_modal.svelte  index.ts
src/lib/modules/app_info/: index.ts
src/lib/modules/audio/: methods.ts  stores.svelte.ts  types.ts
src/lib/modules/audio/ui/: activation_button.svelte  driver_update_banner.svelte  index.ts
src/lib/modules/debug/ui/: debug_panel.svelte
src/lib/modules/error/ui/: error_modal.svelte
src/lib/modules/flow/ui/: editor.svelte  node.svelte  saved_indicator.svelte  sidebar.svelte  snapshot_history.svelte  undo_redo.svelte
src/lib/modules/flow/ui/effect/: _slider.svelte  channel_balance.svelte  compressor.svelte  delay.svelte  eq.svelte  gain.svelte  index.ts  level_meter.svelte  limiter.svelte  mute.svelte  noise_gate.svelte  noise_suppressor.svelte  reverb.svelte  saturator.svelte  waveform.svelte  webrtc_collaborator.svelte
src/lib/modules/flow/ui/input/: app_audio.svelte  audio_file.svelte  microphone.svelte  system_audio.svelte
src/lib/modules/flow/ui/output/: file_recording.svelte  speaker.svelte
src/lib/modules/flow/utils/: adapter.ts  index.ts  node_actions.ts  nodes.ts
src/lib/modules/form/ui/: combobox.svelte
src/lib/modules/overlay/: index.ts  types.ts
src/lib/modules/overlay/modal/: index.ts  manager.svelte.ts
src/lib/modules/overlay/ui/: index.ts
src/lib/modules/overlay/ui/context/: context.svelte  index.ts
src/lib/modules/overlay/ui/menu/: index.ts  menu.svelte  menu_item.svelte  menu_section.svelte  menu_separator.svelte
src/lib/modules/overlay/ui/modal/: confirm.svelte  index.ts  render.svelte  shell.svelte
src/lib/modules/overlay/ui/popover/: popover.svelte
src/lib/modules/overlay/ui/tooltip/: tooltip.svelte
src/lib/modules/pipeline/: methods.ts  stores.svelte.ts  types.ts
src/lib/modules/updater/: methods.ts
src/lib/modules/updater/ui/: update_banner.svelte
src/lib/services/: audio-service.ts  pipeline-repository.ts
src/lib/stores/: app-store.svelte.ts  theme.ts
src/lib/utils/: time.ts  transition.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/pipelines/[id]/: +page.svelte
src/routes/preview/: +page.svelte  _grid.svelte
src/routes/virtual-devices/: +page.svelte
workers/sig/: index.ts  wrangler.toml
