[package]
name = "betteraudio"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "betteraudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# rubato's sinc resampler is unusable in dev without optimisation — a single
# 1024-frame block takes ~16 ms vs ~500 µs at -O3, so the DSP worker can't
# keep real time and input rings overflow. Optimise just the resampler stack;
# leaving the rest of the workspace (tauri, web stack, our crate) at -O0
# keeps clean builds fast.
[profile.dev.package.rubato]
opt-level = 3
[profile.dev.package.realfft]
opt-level = 3
[profile.dev.package.rustfft]
opt-level = 3

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
cpal = "0.15"
rtrb = "0.3"
rubato = "0.16"
hound = "3.5"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
embed_plist = "1.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSArray", "NSString", "NSEnumerator", "NSError", "NSObject",
    "NSObjCRuntime", "NSDictionary", "NSValue", "NSData"
] }
objc2-app-kit = { version = "0.3", features = [
    "NSWorkspace", "NSRunningApplication",
    "NSImage", "NSImageRep", "NSBitmapImageRep", "NSGraphics"
] }
# SCK integration uses a hand-rolled Swift static library at `native/`,
# compiled by build.rs (direct `swiftc`, no SwiftPM). The screencapturekit
# crate is rejected here because its build.rs uses `swift build` which fails
# on the host's CLT (PackageDescription dylib ABI mismatch).
# objc2 stays for NSWorkspace-based app listing.
