[package]
name = "splitwave"
version = "0.5.0"
description = "Audio routing app for macOS, Linux and Windows. Build a node graph of inputs, effects, and outputs"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "splitwave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# rubato's sinc resampler is unusable in dev without optimisation — a single
# 1024-frame block takes ~16 ms vs ~500 µs at -O3, so the DSP worker can't
# keep real time and input rings overflow. Optimise just the resampler stack;
# leaving the rest of the workspace (tauri, web stack, our crate) at -O0
# keeps clean builds fast.
[profile.dev.package.rubato]
opt-level = 3
[profile.dev.package.realfft]
opt-level = 3
[profile.dev.package.rustfft]
opt-level = 3

# DeepFilterNet inference (tract) is far heavier than the FFT crates above. At
# -O0 a single block's inference blows the DSP block deadline, the worker
# stalls, and the voice gets glitchy. Optimise the tract stack + deep_filter in
# dev so the NoiseSuppressor keeps real time.
[profile.dev.package.tract-core]
opt-level = 3
[profile.dev.package.tract-linalg]
opt-level = 3
[profile.dev.package.tract-data]
opt-level = 3
[profile.dev.package.tract-nnef]
opt-level = 3
[profile.dev.package.tract-onnx]
opt-level = 3
[profile.dev.package.tract-onnx-opl]
opt-level = 3
[profile.dev.package.tract-hir]
opt-level = 3
[profile.dev.package.tract-pulse]
opt-level = 3
[profile.dev.package.tract-pulse-opl]
opt-level = 3
[profile.dev.package.deep_filter]
opt-level = 3

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
cpal = "0.15"
rtrb = "0.3"
rubato = "0.16"
ebur128 = "0.1"
flac-codec = "1.3"
hound = "3.5"
opus = "0.3"
ogg = "0.9"
mp3lame-encoder = "0.2"
symphonia = { version = "0.6", features = ["all"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "12", features = ["serde-compat"] }
deep_filter = { git = "https://github.com/Rikorose/DeepFilterNet", tag = "v0.5.6", package = "deep_filter", default-features = false, features = ["tract", "default-model"] }
ndarray = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { version = "0.9", features = ["v0_3_44"] }
freedesktop-desktop-entry = "0.8"
freedesktop-icons = "0.4"
resvg = "0.47"
dirs = "5"

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "0.61"
png = "0.17"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
embed_plist = "1.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSArray", "NSString", "NSEnumerator", "NSError", "NSObject",
    "NSObjCRuntime", "NSDictionary", "NSValue", "NSData", "NSURL"
] }
objc2-app-kit = { version = "0.3", features = [
    "NSWorkspace", "NSRunningApplication"
] }
# SCK integration uses a hand-rolled Swift static library at `native/`,
# compiled by build.rs (direct `swiftc`, no SwiftPM). The screencapturekit
# crate is rejected here because its build.rs uses `swift build` which fails
# on the host's CLT (PackageDescription dylib ABI mismatch).
# objc2 stays for NSWorkspace-based app listing.
